05 Jan 2009 - svn revision 821
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Bugfix for path for bundled fonts - caused error when run on non-Debian
          systems.

2008-11-22  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/gettext.m4: Upgrade to gettext-0.17.
	* m4/iconv.m4: Upgrade to gettext-0.17.
	* m4/lib-link.m4: Upgrade to gettext-0.17.
	* m4/po.m4: Upgrade to gettext-0.17.
	* m4/intdiv0.m4: Upgrade to gettext-0.17.
	* m4/intl.m4: Upgrade to gettext-0.17.
	* m4/intlmacosx.m4: New file, from gettext-0.17.
	* m4/lock.m4: Upgrade to gettext-0.17.
	* m4/longlong.m4: Upgrade to gettext-0.17.
	* m4/printf-posix.m4: Upgrade to gettext-0.17.
	* m4/size_max.m4: Upgrade to gettext-0.17.
	* m4/uintmax_t.m4: Upgrade to gettext-0.17.
	* m4/wint_t.m4: Upgrade to gettext-0.17.
	* Makefile.am (SUBDIRS): Add intl.
	* configure.ac (AC_CONFIG_FILES): Add intl/Makefile.
	(AM_GNU_GETTEXT_VERSION): Bump to 0.17.

05 Nov 2008 - svn revision 765
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Practice activity revised to get it to handle single phrase passed as function
          argument so it again plays nicely with "Lessons"

13 Oct 2008 - svn revision 760
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Lots more work on fullscreen mode with Fish Cascade working but a little slow
        - Practice activity extensively reworked - wrapping of arbitrary length phrases,
          rearrangement of screen layout, fullscreen mode supported, animated Tux icons,
          onscreen display of time, chars, words per min, accuracy with gettext support.

22 Aug 2008 - svn revision 668
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Extensive revision to support fullscreen mode at resolution of OS rather than only 640x480.
          Menu system and comet zap work, fish cascade now works in fullscreen but cannot handle
          toggle of resolution in midstream; practice and lessons still need to be fixed to 
          handle new fullscreen mode.